--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<ul class="dropdown-list">
 						<li>Skills Acquisition</li>
 						<li>Leadership Academy</li>
-						<li>Mentorship</li>
+						<li> <a href="mentors.html">Mentorship</a></li>
 						<li>Community Engagement</li>
 						<li>Acceleration and Incubation</li>
 					</ul>
