--- a/services.html
+++ b/services.html
@@ -64,6 +64,8 @@
                 <a class="nav-link-2 w-nav-link service-color" href="services.html">Services</a>
                 <div class="nav-link-3 w-nav-link drop-parent">
                     <span onclick="dropFunction()">
+                        <label for="toggle"></label>
+                        <input type="checkbox" id="toggle">
                         <i class="fa-solid fa-chevron-down chevron_down"></i>
                     </span>
                     <ul id="myDropdown" class="dropdown-list">
