--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
 		<!--Uncomment this line-->
 	  <!-- <script src="//cdn.jsdelivr.net/gh/freeps2/a7rarpress@main/script.js"></script> -->
 	  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	  <script src="./assets/js/script.js"></script>
 	<script>
 		 
 var swiper = new Swiper(".slide-content", {
